# parqueaderos

./: .gitignore
docs/: 01-resumen-ejecutivo.md  02-modulos-funcionales.md  03-arquitectura-tecnica.md  04-monetizacion-roi.md  05-riesgos-compliance.md  README.md
docs/00-general/: README.md  changelog.md  roadmap.md
docs/01-requisitos/: componentes-rf131-180.md  funcionales.md  historias-usuario.md  no-funcionales.md
docs/02-arquitectura/: ParkCore_Diagramas_UML.html  arquitectura-microservicios.md  arquitectura-saas.md  decisiones-tecnicas.md  modelo-datos.md  seguridad.md
docs/02-arquitectura/diagramas-uml/: 01-casos-uso.mermaid  02-clases.mermaid  03-objetos.mermaid  04-componentes.mermaid  05-despliegue.mermaid  06-secuencia.mermaid  07-actividades.mermaid  08-estados.mermaid  09-temporal.mermaid
docs/03-desarrollo/: api-reference.md  estandares.md  setup.md
docs/04-qa-testing/: casos-prueba.md  plan-pruebas.md
docs/05-manuales/: operaciones.md  usuario-final.md
microservices/: README.md
microservices/anpr-service/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
microservices/anpr-service/app/: __init__.py  config.py  main.py
microservices/anpr-service/app/api/v1/: router.py
microservices/anpr-service/app/api/v1/endpoints/: anpr.py
microservices/anpr-service/app/core/: security.py  tracing.py
microservices/anpr-service/app/db/: models.py  session.py
microservices/anpr-service/app/repositories/: anpr.py
microservices/anpr-service/app/schemas/: anpr.py
microservices/anpr-service/app/services/: anpr_service.py
microservices/anpr-service/tests/: conftest.py  test_anpr_service.py
microservices/anpr-service/tests/unit/: test_anpr_service.py
microservices/auth-service/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
microservices/auth-service/app/: __init__.py  config.py  main.py
microservices/auth-service/tests/: __init__.py  conftest.py  test_auth_service.py
microservices/billing-service/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
microservices/billing-service/app/: __init__.py  config.py  main.py
microservices/billing-service/tests/: test_billing_service.py
microservices/iot-service/: Dockerfile  docker-compose.yml  pyproject.toml
microservices/iot-service/app/: __init__.py  config.py  main.py
microservices/iot-service/app/api/v1/: router.py
microservices/iot-service/app/api/v1/endpoints/: devices.py  gates.py
microservices/iot-service/app/core/: security.py  tracing.py
microservices/iot-service/app/db/: models.py  session.py
microservices/iot-service/app/repositories/: gate_repository.py
microservices/iot-service/app/schemas/: iot.py
microservices/iot-service/app/services/: gate_service.py  iot_service.py
microservices/iot-service/tests/: test_iot_service.py
microservices/monitoring-service/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
microservices/monitoring-service/app/: __init__.py  config.py  main.py
microservices/monitoring-service/tests/: conftest.py  test_monitoring_service.py
microservices/notification-service/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
microservices/notification-service/app/: __init__.py  config.py  main.py
microservices/notification-service/tests/: __init__.py  test_notification_service.py
microservices/payments-service/: .coverage  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
microservices/payments-service/app/: __init__.py  config.py  main.py
microservices/payments-service/tests/: __init__.py  test_payments_service.py
microservices/reports-service/: Dockerfile  docker-compose.yml  pyproject.toml
microservices/sedes-service/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
microservices/sedes-service/app/: __init__.py  config.py  main.py
microservices/sedes-service/app/api/v1/: router.py
microservices/sedes-service/app/core/: security.py  tracing.py
microservices/sedes-service/app/db/: models.py  session.py
microservices/sedes-service/app/schemas/: sede.py
microservices/sedes-service/app/services/: sede_service.py
microservices/sedes-service/migrations/: env.py
microservices/sedes-service/tests/: conftest.py  test_disponibilidad.py  test_sede_api.py  test_sede_service.py
microservices/support-service/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
microservices/tenant-service/: .coverage  Dockerfile  docker-compose.yml  pyproject.toml
(+511 files in other folders)
