[project]
name = "anpr-service"
version = "0.1.0"
description = "ANPR Service — Parqueaderos SaaS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.21.0",
    # OpenTelemetry
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    # Kafka for event publishing
    "aiokafka>=0.12.0",
    # OCR / ONNX runtime (placeholder — add actual LPR engine here)
    # "onnxruntime>=1.19.0",
    # Utils
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[tool.uv]
dev-dependencies = [
    { name = "pytest", version = ">=8.3.0" },
    { name = "pytest-asyncio", version = ">=0.25.0" },
    { name = "pytest-cov", version = ">=6.0.0" },
    { name = "httpx", version = ">=0.28.0" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
